# mic2bluetooth

./: .gitignore  CMakeLists.txt  README.md  README.pt.md  sdkconfig
main/: CMakeLists.txt  main.c  main.txt
main/src/: preferences.h
main/src/hardware/bluetooth/: bluetooth.c
main/src/hardware/microphone/: mic.c  mic.h
main/src/utils/: audio_utils.h
